--- a/style.css
+++ b/style.css
@@ -25,8 +25,31 @@
     padding: 5px;
     background-color: gray;
     border-radius:  0px 0px 15px;
-
+    
 }
 a {
     text-decoration: none;
+}
+
+/* input[type="file"]{
+    display: none;
+    } */
+    
+    .input_img{
+        padding: 10px;
+    cursor: pointer;
+    background-color: #7b7d7e;
+    color: #fff;
+    height: 100px;
+    width: auto;
+    /* height: 100px; */
+    /* border-radius: 50px; */
+}
+
+.form-btn-three {
+    border-radius: 0px 0px 30px;
+}
+
+.form-btn-first {
+    border-radius: 30px 0px 0px;
 }
